
* 2-3-stable *

* Add "dead or not enabled" to :dblib's lost connection messages.


* 2.3.13 *

* Fixed native database type memoization, now at connection instance level. Fix #execute_procedure for :dblib mode to return indifferent access rows too. Misc test case fixes for 2000 & 2005 need for using coerced Time vs Date type. Fix SQL Server 2000's lack of using TinyTds' native affected rows for UPDATE statements, revert to raw SQL. 

* Make login timeout and query timeout backward database.yml friendly for :dblib mode.


* 2.3.12 *

* Add multiple results set support with #execute_procedure for :dblib mode. [Ken Collins]

* Allow unicode conditions strings to be quoted correctly. Like 3.0 branch. [Ken Collins]

* Simplify encoding support. [Ken Collins]

* Add binary timestamp datatype handling. [Erik Bryn]


* 2.3.11

* Add TinyTds/dblib connection mode. [Ken Collins]


* 2.3.10

* Fix DSN'less code. [Erik Bryn]


* 2.3.9

* Support DSN'less connections. Resolves ticket 38. 

* Support upcoming ruby odbc 0.99992

* Include new raw connection interfaces developed and optimized under the 3.0 branch.

* The remove_column conforms to ArgumentError exceptions. [Ken Collins]

* Add support for default function values in schema reflection. Allows for uniqueidentifier default 
values like NEWID(). These are not automatically inserted into the INSERT statement as of yet, that 
could be done user side on a before save callback now. Includes new #newid_function and 
#newsequentialid_function on the connection for helping. Resolves tikcet #42. [Ken Collins]


* 2.3.8

* Properly quote all database names in rake helper methods. [Ken Collins]


* 2.3.7

* Correctly use :date/:time SQL types in 2008 [Ken Collins]


* 2.3.6

* Allow DNS's to not contain a database and use what is in database.yml [Marco Mastrodonato]

* Rake tasks methods for vanallia rails :db namespace parity. [Ken Collins]

* IronRuby integrated security fixes [Jimmy Schementi]


* 2.3.5
